--- a/src/editor/czi-svgedit.css
+++ b/src/editor/czi-svgedit.css
@@ -194,3 +194,7 @@ path[id^="ctrlLine_"] {
 path[id^="segline_"] {
   stroke: rgb(27,115,232);
 }
+
+#canvasBackground {
+  outline: solid 1px rgba(0,0,0,0.5);
+}
